[gd_scene load_steps=14 format=2]

[ext_resource path="res://res/img/ent/misc/lazer_door/LazerDoor_6.png" type="Texture" id=1]
[ext_resource path="res://res/img/ent/misc/lazer_door/LazerDoor_4.png" type="Texture" id=2]
[ext_resource path="res://res/img/ent/misc/lazer_door/LazerDoor_7.png" type="Texture" id=3]
[ext_resource path="res://res/img/ent/misc/lazer_door/LazerDoor_1.png" type="Texture" id=4]
[ext_resource path="res://res/img/ent/misc/lazer_door/LazerDoor_8.png" type="Texture" id=5]
[ext_resource path="res://res/img/ent/misc/lazer_door/LazerDoor_0.png" type="Texture" id=6]
[ext_resource path="res://res/img/ent/misc/lazer_door/LazerDoor_3.png" type="Texture" id=7]
[ext_resource path="res://res/img/ent/misc/lazer_door/LazerDoor_5.png" type="Texture" id=8]
[ext_resource path="res://res/img/ent/misc/lazer_door/LazerDoor_2.png" type="Texture" id=9]
[ext_resource path="res://src/ent/LazerDoor.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.9065, 32.703 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Off",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 4 ) ],
"loop": true,
"name": "On",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "Powering off",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 61.5787, 32.128 )

[node name="LazerDoor" type="StaticBody2D"]
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.00554657, -0.342181 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Off"
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.00555229, -0.287271 )
scale = Vector2( 0.854189, 1 )
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
